--- a/docs/deployment_guide/partner_editable/licenses.adoc
+++ b/docs/deployment_guide/partner_editable/licenses.adoc
@@ -1,3 +1,1 @@
-// Include details about any licenses and how to sign up. Provide links as appropriate. If no licenses are required, clarify that. The following paragraphs provide examples of details you can provide. Remove italics, and rephrase as appropriate.
-
-No licenses are required to deploy this Quick Start. All of the AWS services used in this deployment incur usage costs.
+No licenses are required to deploy this Quick Start. There is no cost to use this Quick Start, but you will be billed for any AWS services or resources that this Quick Start deploys. For more information, refer to the https://fwd.aws/rA69w?[AWS Quick Start General Information Guide^].
