--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -1,66 +1,56 @@
 // Include any predeployment steps here, such as signing up for a Marketplace AMI or making any changes to a partner account. If there are no predeployment steps, leave this file empty.
 
-== Pre deployment steps
-Follow each of the {partner-product-short-name} Deployment Steps:
+== Predeployment steps
 
-. Setup Prerequisites
-. Deploying the Foundational Infrastructure
-. Initial setup with the DDK CLI
-. Lake Formation Permissions
+=== Set up your environment
 
-To complete this deployment, you'll need the following in your local environment
+Before you deploy this Quick Start, you need to set up an environment that has programmatic access to your AWS account and that has various tools installed at the appropriate versions. You can set up your environment locally or in AWS Cloud9, as detailed in the following sections.
 
-Programmatic access to an AWS Account
-Python (version 3.7 or above) and its package manager, pip (version 9.0.3 or above), are required
+==== Set up a local environment
 
+. Confirm that your local environment has Python version 3.7 or later and its package manager, pip, version 9.0.3 or later.
++
 ```
 $ python --version
 $ pip --version
 ```
 
-The AWS CLI installed and configured
+. Confirm that the AWS Command Line Interface (AWS CLI) is installed and configured.
++
+`$ aws --version`
 
+. Confirm that you have AWS CDK version 2.10 or later.
++
+`$ cdk --version`
+
+. Confirm that Git is installed and configured.
++
+`$ git --version`
+
+. If this is your first time using Git, set your user name and email address as follows, replacing the information in brackets.
++
 ```
-$ aws --version
+$ git config --global user.name "<YOUR NAME>"
+$ git config --global user.email "<YOU@EMAIL.COM>"
 ```
+//TODO Troy, I added these quotation marks. Correct?
 
-The AWS CDK CLI (version 2.10 and above) installed
+. Confirm that Git is configured.
++
+`$ git config --list`
 
-```
-$ cdk --version
-```
+==== Set up an AWS Cloud9 environment
 
-The Git CLI installed and configured
+. Sign in to the AWS Management Console using the *Admin* role, and choose an AWS Region. Choose a mature Region where most services are available, such as eu-west-1 or us-east-1.
 
-```
-$ git --version
-```
+. Open the AWS Cloud9 console, and create an EC2 environment in your chosen AWS Region. Choose instance type t3.small or larger, Amazon Linux 2. For details refer to https://docs.aws.amazon.com/cloud9/latest/user-guide/create-environment-main.html[Creating an EC2 Environment^].
 
-If this is your first time using Git, set your git username and email by running:
+. In your integrated development environment (IDE), download the package, upload it to your AWS Cloud9 instance, and unzip it.
++
+By default, Python, pip, AWS CLI, AWS CDK, and Git are installed and configured for you in your AWS Cloud9 environment. 
 
-```
-$ git config --global user.name "YOUR NAME"
-$ git config --global user.email "YOU@EMAIL.COM"
-```
-
-You can verify your git configuration with
-
-```
-$ git config --list
-```
-
-
-
-=== [Optional] Using AWS Cloud9 for Deployment
-
-If you would like to deploy this quickstart using an AWS Cloud9 Environment rather than on your local environment, follow these steps to set up AWS Cloud9:
-
-1. Log in to the AWS account console using the Admin role and select an AWS region. We recommend choosing a mature region where most services are available (e.g. eu-west-1, us-east-1…)
-2. Navigate to `Cloud9` in the AWS console. Set up a https://docs.aws.amazon.com/cloud9/latest/user-guide/create-environment-main.html[Cloud9 Environment^] in the same AWS region (t3.small or higher, Amazon Linux 2) and open the IDE
-3. Download the package, upload it to your Cloud9 instance, and unzip it
-
-Python, Pip, AWS CLI, AWS CDK CLI, and Git CLI packages should all be installed and configured for you by defualt in your Cloud9 environment. Ensure that these pacakges are installed with the correct version with the following commands:
-
+. Confirm that the packages are all installed by entering the following commands:
++
 ```
 $ python --version
 $ pip --version
@@ -68,79 +58,71 @@ $ aws --version
 $ cdk --version
 $ git --version
 ```
+//TODO Troy, Where we say, "download the package," which "package" are we referring to? And where do we download it from?
 
-The version requirements for the packages installed are:
-Python (version 3.7 or above)
-pip (version 9.0.3 or above)
-AWS CDK CLI (version 2.10 and above)
+. Verify the following versions:
+* Python 3.7 or later.
+* pip 9.0.3 or later.
+* AWS CDK version 2.10 or later.
 
+=== Install AWS DDK
 
-Deploying the Foundational Infrastructure
+The https://github.com/awslabs/aws-ddk/blob/main/README.md[AWS DataOps Development Kit (AWS DDK)^] is an open-source development framework for developers who build data workflows and modern data architecture on AWS. Follow these steps to install AWS DDK.
 
-=== Initial setup with the DDK CLI
-
-#### Clone the repository for {partner-product-short-name}
-
+. Clone the https://github.com/aws-quickstart/quickstart-amazon-marketing-cloud[{partner-product-name} Quick Start repository^] as follows, replacing the information in brackets.
++
 ```
-$ git clone GITHUB-PATH
+$ git clone <GITHUB-PATH>
 $ cd amc_quickstart
 $ rm -rf .git
 ```
+//TODO Troy, I added the brackets. Correct? 
+//TODO Troy, Please review all the code throughout this doc to make sure there are brackets wherever needed.
+//TODO Troy, is "cd amc_quickstart" correct? The repo path doesn't contain that text string.
 
-Install AWS DDK CLI, a command line interface to manage your DDK apps
+. Install AWS DDK.
++
+`$ pip install aws-ddk`
 
-```
-$ pip install aws-ddk
-```
+. Verify the installation.
++
+`$ ddk --help`
 
-To verify the installation, run:
+. Create and activate a virtual environment.
++
+`$ python -m venv .venv && source .venv/bin/activate`
 
-```
-$ ddk --help
-```
+. Install the dependencies from `requirements.txt`.
++
+`$ pip install -r requirements.txt --no-cache-dir`
++
+The AWS DDK Core, a library of AWS CDK constructs, is installed.
 
-Create and actitavte a virtualenv
-
-```
-$ python -m venv .venv && source .venv/bin/activate
-```
-
-Install the dependencies from requirements.txt
-This is when the AWS DDK Core library is installed
-
-```
-$ pip install -r requirements.txt --no-cache-dir
-```
-
-If your AWS account hasn't been used to deploy DDK apps before, then you need to bootstrap your environment:
-
+. If your AWS account hasn't been used to deploy AWS DDK apps before, bootstrap your environment as follows, replacing the information in brackets.
++
 ```
 $ ddk bootstrap --help
-$ ddk bootstrap --profile [AWS_PROFILE] --trusted-accounts [AWS_ACCOUNT_ID]
+$ ddk bootstrap --profile <AWS_PROFILE> --trusted-accounts <AWS_ACCOUNT_ID>
 ```
++
+You might recognize a number of files typically found in an AWS CDK Python application, such as `app.py` and `cdk.json. In addition, `ddk.json` holds configuration information about AWS DDK constructs. 
 
-You might recognize a number of files typically found in a CDK Python application (e.g. app.py, cdk.json...). In addition, a file named ddk.json holding configuration about DDK specific constructs is present. Edit the DDK file with right account id, the name of the CodeCommit repository to reference (you will create this repository at a later step)and other data lake parameters (i.e. app, org, team, dataset, and pipeline names).
+. Edit `ddk.json`, entering your account ID, the name of the CodeCommit repository to reference (you'll create this repository in a later step), and names of data-lake parameters such as `app`, `org`, `team`, `dataset`, and `pipeline`.
++
+`$ Edit ddk.json`
+//TODO Troy, Should this be "edit" (lowercase)?
 
-```
-$ Edit ddk.json
-```
+. Initialize Git for the repository.
++
+`$ git init --initial-branch main`
 
-Initialise git for the repository
+. Create a new CodeCommit repository as follows. Replace the information in brackets, using the repository name value from the `ddk.json` configuration file.
++
+`$ ddk create-repository <AMC_QUICKSTART_REPO_NAME> --profile <AWS_PROFILE> --region <AWS_REGION>`
+//TODO Troy, Should we add, "Choose a mature Region where most services are available, such as eu-west-1 or us-east-1" (or any other guidance about choosing a Region)?
 
-```
-$ git init --initial-branch main
-```
-
-Execute the create repository command to create a new codecommit repository
-
-_(Make Sure the AMC_QUICKSTART_REPO_NAME matches the `repository` name value in the `ddk.json` configuration file before executing)_
-
-```
-$ ddk create-repository AMC_QUICKSTART_REPO_NAME --profile [AWS_PROFILE] --region [AWS_REGION]
-```
-
-Add and push the initial commit to the repository
-
+. Add and push the initial commit to the repository as follows, replacing the information in brackets.
++
 ```
 $ git config --global credential.helper "!aws codecommit --profile <my-profile> credential-helper $@"
 $ git config --global credential.UseHttpPath true
@@ -149,62 +131,18 @@ $ git commit -m "Configure AMC QUICKSTART"
 $ git push --set-upstream origin main
 ```
 
-
 == Deployment steps
-=== Deploying the Foundational Infrastructure
+  
+Deploying this Quick Start takes about {deployment_time} to complete. 
 
-Once the above steps are performed, run the deploy command to deploy the the Foundational Infrastructure.
+//TODO Troy, Does deployment (building the stacks) really take 1.5 hours?
 
-```
-$ ddk deploy --profile [AWS_PROFILE]
-```
+//TODO Troy, What do we have to be signed in to before we do Step 1?
 
-The deploy all step deploys an AWS CodePipeline along with its respective AWS CloudFormation Stacks. The last stage of each pipeline delivers the AMC Quickstart infrastructure respectively in the child (default dev) environment through CloudFormation.
+. Run the `deploy` command as follows, replacing the information in brackets.
++
+`$ ddk deploy --profile <AWS_PROFILE>`
 
-[#DeploymentSteps1]
-.Quick Start Deployment Steps for {partner-product-short-name} on AWS
-image::../docs/deployment_guide/images/AMC-QuickStart-Deploy.png[AMC Quickstart Deployment Steps,width=648,height=439]
+. If the status is FAILED in the assets stage of deploying AWS CodePipeline (due to the limited number of file assets that AWS CodeBuild can publish concurrently), choose the *Retry* button. This prompts CodePipeline to continue building the file assets.
 
-_Foundations:_ This application creates the foundational resources for the quickstart. These resources include Lambda Layers, Glue Jobs, S3 Buckets, routing SQS Queues, and Amazon DynamoDB Tables for data and metadata storage.
-
-_Data Lake:_ This application creates the resources for the data lake. All the resources needed for orchestration between services and data processing code are provisioned here.
-
-_Microservices:_ This application creates the resources for the supporting Microservices. All the resources needed for orchestration between the microservices, data processing code, and data and metadata storage for the microservices are provisioned here.
-
-For a walkthrough of the steps the AWS CodePipeline goes through to deploy these resources please refer to the CodePipeline Steps in the Quickstart Operational Guide.
-
-_NOTE:_ If deploying in a new AWS Account, the Assets stage of the CodePipeline may fail due to limitations for the number of concurrent file assets to publish. This is a current limitation of AWS CodeBuild. To fix, click the `Retry` button in CodePipeline for the Assets Stage. This will manually continue the Assets Stage to continue building file assets from its most current progress.
-
-
-
-==== Enable Default Lake Formation Permissions
-In order to query the data in Athena, we highly recommend you enable default Lake Formation Permissions and give your current IAM Role permisssion in AWS Lake Formation. Enabling AWS Lake Formation Permissions helps to build, secure, and manage your data lake quickly and efficiently. Follow the below steps in order to enable Lake Formation and grant your Role the correct permissions:
-
-. In your AWS Account Console go to the AWS Lake Formation page
-. In the navigation pane, under Data catalog, choose Settings
-
-   .. Clear both check boxes and choose Save (you have now enabled Lake Formation to control your Data Catalog resources)
-
-. In the navigation pane under Permissions, choose Data Lake Permissions
-
-   .. Click the Grant Button on the upper right corner
-
-   .. For **IAM users and roles** enter your current IAM Role
-
-   .. For **LF-Tags or catalog resources** select Named data catalog resources
-
-      ... For **Databases**, select your database with name: `aws_datalake_{environment}_{team}_{name}_db"` (default name is `aws_datalake_dev_demoteam_amcdataset_db`)
-
-      ... For **Tables**, select `All Tables`
-
-      ... Leave `Data Filters - Optional` Empty
-
-   .. For **Table Permissions** select `Super`
-
-   .. Click Grant at the bottom of the page to create your Lake Formation Permissions
-
-You have enabled Lake Formation permissions and given your IAM Role permissions to access all tables in your Glue Database. You are now able to access the data returned from your workflow execution using Amazon Athena once the data is uploaded and processed in the data lake.
-
-
-
-
+//TODO Troy, When and how do we choose the correct AWS Region?
