--- a/docs/deployment_guide/partner_editable/troubleshooting.adoc
+++ b/docs/deployment_guide/partner_editable/troubleshooting.adoc
@@ -1,35 +1,21 @@
-*Q:* What is AWS DDK?
+For troubleshooting common Quick Start issues, refer to the https://fwd.aws/rA69w?[AWS Quick Start General Information Guide^] and https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/troubleshooting.html[Troubleshooting CloudFormation^].
 
-*A:* The AWS DataOps Development Kit is an open source development framework for customers that build data workflows and modern data architecture on AWS. For more information on this open source framework, reference the documentation https://awslabs.github.io/aws-ddk/[here^].
-
+'''
 
 *Q:* I encountered a *CREATE_FAILED* error in CloudFormation when I deployed the Quick Start.
 
-*A:* Make sure you have bootstrapped the AWS Account(s) in use by running the command:
+*A:* Ensure that you have bootstrapped the AWS accounts in use by running the following command, replacing the information in brackets.
 
-`ddk bootstrap --profile [AWS_PROFILE] --trusted-accounts [AWS_ACCOUNT_ID]`
+`ddk bootstrap --profile <AWS_PROFILE> --trusted-accounts <AWS_ACCOUNT_ID>`
 
-Also, ensure the `ddk.json` file specifies the correct AWS Account ID for the child environment used to deploy (e.g. default is `dev`).
+Also ensure that the `ddk.json` file specifies the correct AWS account for the child environment used to deploy (for example, default is set to `dev`).
 
-For additional information, see https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/troubleshooting.html[Troubleshooting AWS CloudFormation^].
+'''
 
+*Q:* I can't find the configuration for my AMC instance.
 
-*Q:* I encountered a *FAILED* status on the *Assets* Step of the AWS CodePipeline Deployment.
+*A:* In the AMC user interface, you can view the *Instance Information* page for detailed information on the AMC instance S3 bucket, endpoint URL, data-upload account, advertiser IDs, and entity IDs. You can also retrieve this information by raising a ticket to the AMC team.
 
-*A:* If deploying in a new AWS Account, the Assets stage of the CodePipeline may fail due to limitations for the number of concurrent file assets to publish. This is a current limitation of AWS CodeBuild. To fix, click the `Retry` button in CodePipeline for the Assets Stage. This will manually continue the Assets Stage to continue building file assets from its most current progress.
+//TODO Troy, What do we mean by "AMC user interface"?
 
-*Q:* How do I set up Amazon QuickSight dashboards to visualize the data populated on S3?
-
-*A:* Follow the documentation [here](README.md) to set up QuickSight Dashboards for your AMC Instance data.
-
-
-*Q:* Where can I find more information for the workflow queries available to create and schedule with for my AMC Instance?
-
-*A:* On the AMC UI, you can view the Interactive Query Library (IQL) for a list of available queries for a set of different use cases. Also, custom queries are supported.
-
-To create, schedule, and manage your workflow queries, refer to the Platform Manager WFM Notebooks in Amazon SageMaker for more detailed documentation.
-
-
-*Q:* Where do I find my the configuration for my AMC Instance?
-
-*A:* On the AMC UI, you can view the Instance Information page for detailed information on the AMC Instance S3 Bucket, Endpoint URL, Data Upload Account, Advertiser IDs, and Entity IDs. Also, you can retrieve this information by raising a ticket to the AMC Team.
+//TODO Troy, How do people raise a ticket to the AMC team?
