--- a/docs/operational_guide/partner_editable/overview.adoc
+++ b/docs/operational_guide/partner_editable/overview.adoc
@@ -1,6 +1,1 @@
-This guide provides instructions for operating the {partner-product-short-name} Quick Start reference architecture on the AWS Cloud. It is for Amazon Marketing Cloud users who want to build custom analytics using the data lake, multi-tenant, and workflow-management features.
-
-The Quick Start provides a 2 modules to enable you meet your requirements:
-[start=1]
-. Hydrating the Data Lake with Sagemaker Notebooks - how to start pulling AMC reports into your data lake
-. Building Your first QuickSight Dashboard - visualizing your AMC reports
+This guide provides instructions for using the architecture deployed by the{partner-product-name} Quick Start. It's for Amazon Marketing Cloud (AMC) users who want to build custom analytics using the data lake, multi-tenant, and workflow-management features.
